--- a/viewer/templates/base.html
+++ b/viewer/templates/base.html
@@ -28,6 +28,11 @@
               Home
             </a>
           </div>
+          <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="{% url 'movie_create' %}">
+              Add Movie
+            </a>
+          </div>
         </div>
       </div>
     </nav>
